--- a/jianshu/package.json
+++ b/jianshu/package.json
@@ -12,6 +12,7 @@
     "react-hot-loader": "^4.5.3",
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
+    "redux-saga": "^1.1.1",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
