--- a/jianshu/package.json
+++ b/jianshu/package.json
@@ -10,6 +10,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.5.3",
+    "react-redux": "^7.1.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.1",
