--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "miaosha",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@babel/core": "7.8.4",
     "@material-ui/core": "^4.9.4",
